--- a/java.html
+++ b/java.html
@@ -55,7 +55,7 @@ function affichageConditionnel(bouton, id) {
                 compatible toutes plateformes JVM Java Virtual Machine pour interpréter le Byte code. De ce fait,
                 c'est un langage offrant une grande portabilité.
                 C’est un langage à la fois compilé et interprété. Il est donc plus rapide que Python (interprété) mais
-                plus lent que C++ (compilé). java -version en ligne de commande permet de vérifier que java est installé.</p>
+                plus lent que C++ (compilé).</p>
         </div>
 
         <div class="droite">
@@ -86,6 +86,7 @@ function affichageConditionnel(bouton, id) {
 
     <p>Pour exécuter un programme Java en utilisant le terminal, il faut d'abord se rendre dans le dossier comportant le fichier, puis compiler le programme avec la commande</p> <pre><code class="language-javascript">javac monFichier.java</code></pre> <p>Le fichier se transforme alors en binaire exécutable par la Machine Virtuelle Java : monFichier.class. Pour exécuter ce programme il reste maintenant à utiliser la commande</p> <pre><code class="language-javascript">java monFichier</code></pre>
 
+        <p>Notons que <em>java -version</em> en ligne de commande permet de vérifier que Java est bien installé.</p>
     </div>
 
 
@@ -242,7 +243,45 @@ public class Principale {
 
     </div>
 
+    <!------------- LES TABLEAUX ----------------------------->
 
+    <h3>Les tableaux<button type="submit" onclick="affichageConditionnel(this,'tableaux_cache');"> + </button></h3>
+
+    <div id="tableaux_cache" style="display:none;">
+
+        <p>Les tableaux sont des éléments de stockage statiques, dont la taille ne doit pas varier. Ainsi, on ne peut pas rajouter d'élément à un tableau sous peine d'en modifier totalement la structure. Les tableaux sont indexés à partir de 0 et n'admettent pas de système clé-valeur.</p>
+
+        <pre><code class="language-javascript">import java.util.*;</code></pre>
+
+        <h4>Déclaration d'un tableau</h4>
+
+        <p>Un tableau doit être déclaré en indiquant le type d'objet qu'il contient. Il ne peut pas contenir des objets de types différents. Toutefois, on peut facilement déroger à cette règle en créant des tableaux de type Object qui est très large.</p>
+
+        <pre><code class="language-javascript">Object[] tab = {"hello", 13, 's'};</code></pre>
+
+        <p>Lors de la déclaration d'un tableau, doit être également précisé le nombre d'éléments qu'il contient. Le typage d'un élément et la taille du tableau ne pourront plus être modifiés ultérieurement.</p>
+
+        <pre><code class="language-javascript">int[] tab = {12, 1, 34, 21};</code></pre>
+
+        <p>Lors de la déclaration d'un tableau vide, tous les éléments sont initialisés automatiquement, les nombres à 0, les booleans à false, les objets et chaînes de caractères à null.</p>
+
+        <pre><code class="language-javascript">int[] tab = new int[6];</code></pre>
+
+        <h4>Affichage d'un tableau</h4>
+
+        <pre><code class="language-javascript">for(int i=0; i&lt tab.length; i++){
+    System.out.print(tab[i]+"\t");</code></pre>
+        <p>ou encore</p>
+
+        <pre><code class="language-javascript">for(String valeur : tab){
+    System.out.print(valeur+"\t");</code></pre>
+
+        <h4>Vector</h4>
+
+        <p>La classe Vector, aujourd'hui désuète, permet de définir des tableaux utilisant des méthodes proches de celles des listes. Notons que la classe Vector est compatible avec la synchronisation à l'aide de threads. </p>
+
+
+    </div>
 
 
 
@@ -498,13 +537,15 @@ import java.net.*;</code></pre>
 
     <p>Le serveur crée une socket de connexion sur un port défini, puis attend la demande de communication venant d'un client pour ouvrir une socket de communication. De son côté, le client crée une socket de communication à l'adresse du serveur et sur le port défini.</p>
 
+        <img src="socket.png" height="300" width="750">
+
         <p>Une communication par Sockets est structurée de la façon suivante :</p>
         <ul>
             <li>une classe Server comprenant une socket de connexion et une socket de communication</li>
-            <li>une classe Client comprenant une socket de connexion</li>
+            <li>une classe Client comprenant une socket de communication</li>
         </ul>
 
-        <img src="socket.png">
+        <img src="socketObjet.png">
 
         <h4>Tester les ports disponibles du client</h4>
 
@@ -537,7 +578,7 @@ import java.net.*;</code></pre>
 
     <p>La machine virtuelle Java ferme les sockets non utilisés à la fin de l'exécution du programme. Toutefois, le nombre de sockets ouvertes par un programme est limité, ce qui conduit à des erreurs quand cette limite est atteinte. La méthode close() permet de fermer la connexion.</p>
 
-        <h4>Exemple de transmission d'une chaîne de caractères :</h4>
+        <h4>Exemple de transmission d'une chaîne de caractères par TCP :</h4>
 
         <p>Il n'est pas nécessaire de transmettre la taille des String avec le message lorsqu'on utilise les méthodes writeUTF() et readUTF() qui détectent automatiquement la taille des String dans un flux. La quantité d'information transmise est donnée par message.length() si on note message la variable représentant le message reçu.</p>
 
@@ -559,7 +600,6 @@ import java.net.*;</code></pre>
             System.out.println("Message reçu : " + dis.readUTF());
 
             // fermeture connexion
-            dis.close();
             com.close();
             srv.close();
         } catch (IOException e) {
@@ -582,7 +622,6 @@ import java.net.*;</code></pre>
             dos.writeUTF("hello world");
 
             // fermeture connexion
-            dos.close();
             clt.close();
         } catch (IOException e) {
             e.printStackTrace();
@@ -590,7 +629,7 @@ import java.net.*;</code></pre>
     }
 }</code></pre>
 
-        <h4>Exemple de transmission d'un entier :</h4>
+        <h4>Exemple de transmission d'un entier par TCP :</h4>
 
         <p>Dans cet exemple un client transmet au serveur un entier.</p>
 
@@ -606,7 +645,6 @@ import java.net.*;</code></pre>
 
             System.out.println("Message received: " + dis.readInt());
 
-            dis.close();
             com.close();
             srv.close();
         } catch (IOException e) {
@@ -626,7 +664,6 @@ import java.net.*;</code></pre>
 
             dos.writeInt(1420);
 
-            dos.close();
             clt.close();
         } catch (IOException e) {
             e.printStackTrace();
@@ -634,11 +671,9 @@ import java.net.*;</code></pre>
     }
 }</code></pre>
 
-        <h4>Exemple de transmission d'un objet :</h4>
+        <h4>Exemple de transmission d'un objet par TCP :</h4>
 
         <p>Dans cet exemple, un client transmet au serveur un objet sous forme de message.</p>
-
-        <img src="socketObjet.png">
 
         <p><em>Côté serveur</em> </p>
 
@@ -657,8 +692,6 @@ import java.net.*;</code></pre>
             ObjetEchange obj = (ObjetEchange) ois.readObject();
             System.out.println("Message reçu : " + obj.toString());
 
-            ois.close();
-            dis.close();
             com.close();
             srv.close();
         } catch (IOException e) {
@@ -680,12 +713,10 @@ import java.net.*;</code></pre>
             Socket clt = new Socket("domaineHote", 5555);
             // communication sortante, les data sont placees dans un objet transmis sous forme de Message
             DataOutputStream dos = new DataOutputStream(clt.getOutputStream());
-            ObjectOutputStream  ois = new ObjectOutputStream(dos);
+            ObjectOutputStream  oos = new ObjectOutputStream(dos);
 
-            ois.writeObject(obj);
+            oos.writeObject(obj);
 
-            ois.close();
-            dos.close();
             clt.close();
         } catch (IOException e) {
             e.printStackTrace();
@@ -713,7 +744,7 @@ import java.net.*;</code></pre>
     }
 }</code></pre>
 
-        <h4>Exemple de serveur connecté à plusieurs clients :</h4>
+        <h4>Exemple de serveur connecté à plusieurs clients par TCP :</h4>
 
         <p>Le serveur ne traite qu'un seul client à la fois. Si ce traitement prend du temps, les autres clients peuvent être bloqués. Pour éviter ce problème, la gestion des connexions peut être pilotée par des threads. On privilégie alors le pool de threads à la création dynamique de threads par souci de performance car dans ce dernier cas, il est possible de créer une infinité de threads ou encore de créer et détruire un thread à chaque nouvelle connexion.</p>
 
@@ -721,6 +752,8 @@ import java.net.*;</code></pre>
         <p><em>Côté serveur</em></p>
 
         <p>Le serveur commence par créer un ensemble de threads en attente de recevoir une demande de connexion. Lorsqu'un client demande une connexion, elle est prise en charge par un des threads.</p>
+
+        <img src="socketPool.png">
 
         <pre><code class="language-javascript">public class ServeurTCP {
     public static void main(String[] args) {
@@ -741,18 +774,18 @@ import java.net.*;</code></pre>
 public class ServerThread extends Thread { // gestion des threads pour chaque connexion
     ServerSocket srv;
 
-    public ServerThread(ServeurSocket sock) {
-        srv = sock;
+    public ServerThread(ServeurSocket srv) {
+        this.srv = srv;
     }
 
     public void run() {
         try{
             for(int i=0; i<11; i++) { // on considère 10 clients
                 Socket com = srv.accept();
-                DataOutputStream dos = new DataOutputStream(com.getOutputStream());
+                DataInputStream dis = new DataInputStream(com.getInputStream());
 
                 while(true) {
-                    dos.readUTF("hello world");
+                    dis.readUTF("hello world");
                 }
                 com.close();
             }
@@ -772,7 +805,6 @@ public class ServerThread extends Thread { // gestion des threads pour chaque co
 
             dos.writeUTF("hello world");
 
-            dos.close();
             clt.close();
         } catch (IOException e) {
             e.printStackTrace();
@@ -789,6 +821,8 @@ public class ServerThread extends Thread { // gestion des threads pour chaque co
 
 
         <h4>Exemple de transmission d'une chaîne de caractères :</em></h4>
+
+        <p>Dans cet exemple le serveur reçoit une chaîne de caractères provenant d'un client.</p>
 
         <p><em>Côté serveur</em> </p>
 
@@ -1153,7 +1187,9 @@ import javax.jms.*;</code></pre>
         <p> Dans la communication point-à-point, l'objet intermédiaire est une file d'attente (queue). Plusieurs senders peuvent envoyer sur la même file d'attente mais un seul receiver peut voir le message. On parle de communication N à 1. La communication est asynchrone et mémorisée. C'est le cas par exemple lorsqu'on utilise une imprimante en mode connecté, ou encore lorsqu'on utilise une boîte mail.</p>
         <p> Dans la communication événementielle, l'objet intermédiaire est un sujet (topic). Les publishers envoient leurs messages sur un topic. Les subscribers s'inscrivent au topic pour recevoir les messages publiés sur ce topic. Plusieurs publishers peuvent envoyer des messages sur le même topic et plusieurs subscribers peuvent consulter les messages du topic. C'est le cas par exemple lors d'un fil de discussion dans un tchat.</p>
 
-    <h4>Construction d'un service de messagerie Topic avec JMS 1.1</h4>
+    <h4>Exemple d'une communication Topic avec JMS 1.1 :</h4>
+
+        <p>Dans cet exemple le serveur envoie une chaîne de caractères provenant à un client.</p>
 
     <p><em>Côté serveur :</em></p>
 
@@ -1220,7 +1256,9 @@ import javax.jms.*;</code></pre>
     }
 }</code></pre>
 
-    <h4>Construction d'un service de messagerie Queue avec JMS 1.1</h4>
+    <h4>Exemple d'une communication Queue avec JMS 1.1 :</h4>
+
+      <p>Dans cet exemple le serveur reçoit une chaîne de caractères provenant d'un client.</p>
 
         <p><em>Côté serveur :</em></p>
 
@@ -1272,8 +1310,9 @@ import javax.jms.*;</code></pre>
     }
 }</code></pre>
 
-    <h4>Echange de mails avec JMS 1.1</h4>
+    <h4>Exemple d'un échange de mails avec JMS 1.1 :</h4>
 
+        <p>Dans cet exemple, un serveur transmet et reçoit une réponse d'un client. On utilise le mode Queue qui se prête bien à ce type d'échange.</p>
     <p><em>Côté serveur</em></p>
 
     <pre><code class="language-javascript">public class Serveur { // sender
@@ -1342,14 +1381,15 @@ import javax.jms.*;</code></pre>
     }
 }</code></pre>
 
-    <p><em>et la classe Letter :</em></p>
+    <p><em>et la classe ObjetEchange :</em></p>
 
-    <pre><code class="language-javascript">public class Letter implements Serializable {
+        <p>La classe ObjetEchange doit être présente à la fois côté serveur et côté client. Comme l'objet doit être transmis, la classe ObjetEchange implémente l'interface Serialitable.</p>
+    <pre><code class="language-javascript">public class ObjetEchange implements Serializable {
     String emetteur;
     GregorianCalendar date;
     String texte;
 
-    public Letter(String emetteur, GregorianCalendar date, String texte) {
+    public ObjetEchange(String emetteur, GregorianCalendar date, String texte) {
 	    this.emetteur = emetteur;
 	    this.date = date;
 	    this.texte = texte;
@@ -1357,7 +1397,7 @@ import javax.jms.*;</code></pre>
 
     @Override
     public String toString() {
-        System.out.println("message de : " + emet + ", émis le : " + date.getTime() + ", contenu : " + text );
+        System.out.println("message de : " + emetteur + ", émis le : " + date.getTime() + ", contenu : " + texte );
     }
 }</code></pre>
 
