--- a/git.html
+++ b/git.html
@@ -247,6 +247,8 @@ git merge nomBranche</pre>
     <tr> <td> créer le dossier <em>monDossier</em> </td> <td> <pre>mkdir monDossier</pre></td> </tr>
     <tr> <td> vider le terminal <em>monFichier</em> </td> <td> <pre>clear</pre></td> </tr>
     <tr> <td> ouvrir <em>monFichier</em> qui se trouve dans le répertoire courant </td> <td> <pre>./monFichier</pre></td> </tr>
+    <tr> <td> ouvrir <em>monFichier</em> qui se trouve dans le répertoire parent </td> <td> <pre>../monFichier</pre></td> </tr>
+    <tr> <td> adresse absolue </td> <td> <pre>/adresse</pre></td> </tr>
     <tr> <td> supprimer <em>monFichier</em> </td> <td><pre>rm monFichier</pre></td></tr>
     <tr> <td> supprimer <em>monDossier</em></td> <td><pre>rm -r monDossier</pre></td></tr>
     <tr> <td> déplacer <em>monFichier</em></td> <td><pre>mv chemin_monFichier  chemin _nouvelEmplacement</pre></td></tr>
