--- a/java.html
+++ b/java.html
@@ -1045,7 +1045,7 @@ import java.net.*;</code></pre>
 
 <h4>Exemple d'une boite de messagerie par RMI :</h4>
 
-        <p>Dans cet exemple, le client peut déposer un message sur le serveur après s'être inscrit puis consulter son message.</p>
+        <p>Dans cet exemple, le client peut s'inscrire à un service de messagerie, envoyer un message composé de son nom, la date et le contenu, consulter le dernier message d'un client par son numéro de client.</p>
 
         <img src="rmiObjet.png">
 
